--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./src:/usr/app/src
       - ./package.json:/usr/app/package.json
+      - ./public:/usr/app/public
     depends_on:
       - mongo
     command: sh -c "yarn && yarn dev"
