--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint": "^7.28.0",
         "faker": "^5.5.3",
         "jest": "^27.0.4",
+        "mongodb-memory-server": "^6.9.6",
         "prettier": "^2.3.1",
         "supertest": "^6.1.3",
         "ts-node-dev": "^1.1.6",
