--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
         "test": "jest",
-        "dev": "NODE_ENV=development tsnd --poll --respawn --transpile-only src/server.ts",
+        "dev": "tsnd --poll --respawn --transpile-only src/server.ts",
         "coveralls": "cat ./coverage/lcov.info | coveralls",
         "start": "NODE_ENV=production node dist/server.js",
         "build": "tsc"
@@ -17,11 +17,9 @@
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^8.5.1",
-        "mongodb": "^3.6.9",
         "mongoose": "^5.12.13",
         "multer": "^1.4.2",
         "redis": "^3.1.2",
-        "uuid": "^8.3.2",
         "yup": "^0.32.9"
     },
     "devDependencies": {
