--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./public:/usr/app/public
     depends_on:
       - mongo
-    command: sh -c "yarn && yarn start-dev"
+    command: sh -c "yarn && yarn dev"
   mongo:
     container_name: mongodb
     image: mongo
