--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
