--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-auto-height-image": "^3.2.4",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1"
   },
